@@ -8,6 +8,7 @@ import java.io.ByteArrayInputStream;
 import java.io.ObjectInputStream;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.Base64;
 
 public final class DataBase64LoadCommand extends AbstractDataCommand {
 
@@ -20,7 +21,7 @@ public final class DataBase64LoadCommand extends AbstractDataCommand {
         System.out.println("[DATA BASE64 LOAD]");
         @NonNull final byte[] base64Byte = Files.readAllBytes(Paths.get(FILE_BASE64));
         final String base64Date = new String(base64Byte);
-        final byte[] bytes = new BASE64Decoder().decodeBuffer(base64Date);
+        final byte[] bytes = Base64.getDecoder().decode(base64Date);
         @NonNull final ByteArrayInputStream byteArrayInputStream = new ByteArrayInputStream(bytes);
         @NonNull final ObjectInputStream objectInputStream = new ObjectInputStream(byteArrayInputStream);
         @NonNull final Domain domain = (Domain) objectInputStream.readObject();
